GeneWeb version 3.06
--------------------

* GeneWeb Service/CGI (gwd)
  - [16 Jun 00] Added feature: in relationship computing, when option
    "shortest path" is selected, it is displayed together with a link
    to see the next shortest path.
  - [13 Jun 00] Deleted this stupid "<meta http-equiv...>" in welcome pages
    and in other pages, because it makes some browsers generate two requests
    and we see the page blinking. Moreover, it has no sense (even if it is
    standard), since the HTTP header already contains that.

* Lexicon (lang/lexicon.txt) and welcome pages (lang/*/start.txt)
  - [14 Jun 00] Completed and fixed Portuguese version (Jose Paulo Moitinho
    de Almeida).
  - [14 Jun 00] Completed Dutch lexicon (Bernard Ceurstemont).

GeneWeb version 3.05
--------------------

* GeneWeb Service/CGI (gwd)
  - [03 Jun 00] In history, added an input field before the ">>" to be able
    to specify a number of entries to be displayed in the next page.
  - [02 Jun 00] Merge of individuals faster now: can automatically merge
    families and individuals when they are identical in both ancestors trees.
  - [23 May 00] In "divorce" section, added case "separated".
  - [18 May 00] In displaying by places/surnames, baptism places are added
    with birth places and burial with death.
  - [17 May 00] Added an "Ok" button after the password input area
    in CGI mode.
  - [14 May 00] Added case "engaged" in "family" forms.
  - [14 May 00] Added option "-images_url" to give an URL to GeneWeb
    images (flags, logo, background, up arrow). Can be useful e.g. in
    cgi mode if the associated Web server answers faster than gwd. By
    default, the GeneWeb images are sent by gwd.
  - [14 May 00] Fixed bug in update forms (person or family): in case of
    name conflict (name already used by another person), when clicking on
    the "return" button, the fields containing quotes ("), less (<) or
    greater (>) characters were truncated.